{
    "name": "InputActions",
    "maps": [
        {
            "name": "New action map1",
            "id": "1a08080f-1634-416b-aef6-8ddacedb1ad1",
            "actions": [
                {
                    "name": "VerticalAxis",
                    "type": "Button",
                    "id": "fa067176-93de-4a05-a491-399f8067e18b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HorizontalAxis",
                    "type": "Button",
                    "id": "12851e32-96f2-498c-b324-d1155c773c3c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Escape",
                    "type": "Button",
                    "id": "6a980528-6037-47f3-9400-8745bf500ff8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ActionMain",
                    "type": "Button",
                    "id": "5034d72a-6f93-412d-acac-4b9388a8040b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ActionSecond",
                    "type": "Button",
                    "id": "95461f15-046d-4dbe-a4be-f39b37036f36",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "c045b84f-1987-4192-94a4-70dbddb01576",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "fbe7ac68-02f4-4186-94ec-f126cd4ccba1",
                    "path": "1DAxis",
                    "interactions": "Hold,Press",
                    "processors": "",
                    "groups": "",
                    "action": "VerticalAxis",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "866f9ba8-741c-4b3d-9875-01049b5e21cd",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "DefaultScheme",
                    "action": "VerticalAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "f59c3ab1-26d0-4870-95aa-efcd8ee162f8",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "DefaultScheme",
                    "action": "VerticalAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "973644cc-9e9d-4f12-8af5-643d9d7d8185",
                    "path": "1DAxis",
                    "interactions": "Hold,Press",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalAxis",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "a51825eb-ecc2-4013-b7bb-140de8ac474c",
                    "path": "<Keyboard>/#(A)",
                    "interactions": "",
                    "processors": "",
                    "groups": "DefaultScheme",
                    "action": "HorizontalAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "0513fc99-5906-4321-9f66-d17748d56a2c",
                    "path": "<Keyboard>/#(D)",
                    "interactions": "",
                    "processors": "",
                    "groups": "DefaultScheme",
                    "action": "HorizontalAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "413da58d-91ed-491b-afdf-42c93dcd1913",
                    "path": "<Keyboard>/escape",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "DefaultScheme",
                    "action": "Escape",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aa723fb7-5f03-46ba-94c1-1e86f2286fc7",
                    "path": "<Keyboard>/e",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "DefaultScheme",
                    "action": "ActionMain",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9d69dd2e-228f-4370-b140-2446bfe2146b",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "DefaultScheme",
                    "action": "ActionSecond",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5f6849b9-8fe8-43ce-a284-f6f218da21e1",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "DefaultScheme",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "DefaultScheme",
            "bindingGroup": "DefaultScheme",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}